{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 549,
  "lineage": "d81102ef-f136-bbcc-b372-970be917bb4b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ebe82ab2f139806",
            "association_id": "eipassoc-02c27f2a174f214c9",
            "domain": "vpc",
            "id": "eipalloc-04ebe82ab2f139806",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-03f34ef103d1a2e77",
            "private_dns": "ip-10-100-1-6.eu-west-2.compute.internal",
            "private_ip": "10.100.1.6",
            "public_dns": "ec2-13-43-1-209.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.1.209",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07325431fa2186a03",
            "arn": "arn:aws:ec2:eu-west-2:868171460502:instance/i-0e93d3d56a5fba700",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-0e93d3d56a5fba700",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "steve-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f571c6aa4cc29424",
            "private_dns": "ip-10-100-1-45.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.1.45",
            "public_ip": "13.40.173.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02331a6e6c89b56ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00cae4032824b2e24"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c4d67662a7f3241",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00cae4032824b2e24"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds_instance",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.LB-SG",
            "aws_security_group.allow_ssh",
            "aws_security_group.rds_security_group",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.this",
            "data.aws_ami.amzn_linux_2",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "data.aws_subnets.subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07325431fa2186a03",
            "arn": "arn:aws:ec2:eu-west-2:868171460502:instance/i-0d95b0aabcf6b3541",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-0d95b0aabcf6b3541",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "steve-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0383f28888a599fbb",
            "private_dns": "ip-10-100-3-108.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.3.108",
            "public_ip": "35.177.93.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b588aed2c73ba362",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00cae4032824b2e24"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9b46125fa0036d5",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00cae4032824b2e24"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds_instance",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.LB-SG",
            "aws_security_group.allow_ssh",
            "aws_security_group.rds_security_group",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.this",
            "data.aws_ami.amzn_linux_2",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "data.aws_subnets.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:internet-gateway/igw-08501d0d678201b73",
            "id": "igw-08501d0d678201b73",
            "owner_id": "868171460502",
            "tags": {
              "Name": "steve-igw"
            },
            "tags_all": {
              "Name": "steve-igw"
            },
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:loadbalancer/app/steve-LB/3102353fd2ee8899",
            "arn_suffix": "app/steve-LB/3102353fd2ee8899",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "steve-LB-331239689.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:loadbalancer/app/steve-LB/3102353fd2ee8899",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "steve-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03ecb93326ca28999"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07d949a251d5873f3"
              },
              {
                "subnet_id": "subnet-09c4d67662a7f3241"
              }
            ],
            "subnets": [
              "subnet-07d949a251d5873f3",
              "subnet-09c4d67662a7f3241"
            ],
            "tags": {
              "Project": "steve"
            },
            "tags_all": {
              "Project": "steve"
            },
            "vpc_id": "vpc-0ab6d8cf38c5553d0",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.LB-SG",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LB-Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:listener/app/steve-LB/3102353fd2ee8899/ad9ebfc09de8aa13",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:targetgroup/steve-TG/8e925e6cda22fc9d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:listener/app/steve-LB/3102353fd2ee8899/ad9ebfc09de8aa13",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:loadbalancer/app/steve-LB/3102353fd2ee8899",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Project": "steve"
            },
            "tags_all": {
              "Project": "steve"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app-LB",
            "aws_lb_target_group.lb-TG",
            "aws_security_group.LB-SG",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:targetgroup/steve-TG/8e925e6cda22fc9d",
            "arn_suffix": "targetgroup/steve-TG/8e925e6cda22fc9d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:targetgroup/steve-TG/8e925e6cda22fc9d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "steve-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "wordpress-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:targetgroup/steve-TG/8e925e6cda22fc9d-20240729164306965200000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:targetgroup/steve-TG/8e925e6cda22fc9d",
            "target_id": "i-0e93d3d56a5fba700"
          },
          "dependencies": [
            "aws_db_instance.rds_instance",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.wordpress",
            "aws_lb_target_group.lb-TG",
            "aws_security_group.LB-SG",
            "aws_security_group.allow_ssh",
            "aws_security_group.rds_security_group",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.this",
            "data.aws_ami.amzn_linux_2",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "data.aws_subnets.subnets"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:targetgroup/steve-TG/8e925e6cda22fc9d-20240729164306881500000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:868171460502:targetgroup/steve-TG/8e925e6cda22fc9d",
            "target_id": "i-0d95b0aabcf6b3541"
          },
          "dependencies": [
            "aws_db_instance.rds_instance",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2_role",
            "aws_instance.wordpress",
            "aws_lb_target_group.lb-TG",
            "aws_security_group.LB-SG",
            "aws_security_group.allow_ssh",
            "aws_security_group.rds_security_group",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_vpc.this",
            "data.aws_ami.amzn_linux_2",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "data.aws_subnets.subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ebe82ab2f139806",
            "association_id": "eipassoc-02c27f2a174f214c9",
            "connectivity_type": "public",
            "id": "nat-0b69450dd3ace8c33",
            "network_interface_id": "eni-03f34ef103d1a2e77",
            "private_ip": "10.100.1.6",
            "public_ip": "13.43.1.209",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09c4d67662a7f3241",
            "tags": {
              "Name": "steve-nat"
            },
            "tags_all": {
              "Name": "steve-nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:route-table/rtb-041c25490941ca94c",
            "id": "rtb-041c25490941ca94c",
            "owner_id": "868171460502",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b69450dd3ace8c33",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "steve-private-rt"
            },
            "tags_all": {
              "Name": "steve-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:route-table/rtb-0decad86cbcba28e7",
            "id": "rtb-0decad86cbcba28e7",
            "owner_id": "868171460502",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08501d0d678201b73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "steve-public-rt"
            },
            "tags_all": {
              "Name": "steve-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0178f6a259b37646c",
            "route_table_id": "rtb-041c25490941ca94c",
            "subnet_id": "subnet-0a9b46125fa0036d5"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7a5416d92d40900",
            "route_table_id": "rtb-041c25490941ca94c",
            "subnet_id": "subnet-04752989671ddbad2"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed828a00faef64b3",
            "route_table_id": "rtb-0decad86cbcba28e7",
            "subnet_id": "subnet-09c4d67662a7f3241"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09883874c345f7583",
            "route_table_id": "rtb-0decad86cbcba28e7",
            "subnet_id": "subnet-07d949a251d5873f3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:security-group/sg-03ecb93326ca28999",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ecb93326ca28999",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "steve-LB-SG",
            "name_prefix": "",
            "owner_id": "868171460502",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "steve"
            },
            "tags_all": {
              "Project": "steve"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:security-group/sg-00cae4032824b2e24",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00cae4032824b2e24",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ecb93326ca28999"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "868171460502",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.LB-SG",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:security-group/sg-0391ba715b4db2878",
            "description": "Security group for RDS instance",
            "egress": [],
            "id": "sg-0391ba715b4db2878",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.100.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "steve-rds-security-group",
            "name_prefix": "",
            "owner_id": "868171460502",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group"
            },
            "tags_all": {
              "Name": "RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:subnet/subnet-0a9b46125fa0036d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9b46125fa0036d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868171460502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "steve-private-1",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "steve-private-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:subnet/subnet-04752989671ddbad2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.100.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04752989671ddbad2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868171460502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "steve-private-2",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "steve-private-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:subnet/subnet-09c4d67662a7f3241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c4d67662a7f3241",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868171460502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "steve-public-1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "steve-public-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:subnet/subnet-07d949a251d5873f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d949a251d5873f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "868171460502",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "steve-public-2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "steve-public-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ab6d8cf38c5553d0"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:868171460502:vpc/vpc-0ab6d8cf38c5553d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0dfdfe5ee5997d29c",
            "default_route_table_id": "rtb-046d59641d73a2e3a",
            "default_security_group_id": "sg-0b2b55a31890e7a24",
            "dhcp_options_id": "dopt-01be46dd5427de226",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab6d8cf38c5553d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-046d59641d73a2e3a",
            "owner_id": "868171460502",
            "tags": {
              "Name": "steve-vpc"
            },
            "tags_all": {
              "Name": "steve-vpc"
            }
          }
        }
      ]
    }
  ]
}